--- a/blog/app/assets/stylesheets/checkout.scss
+++ b/blog/app/assets/stylesheets/checkout.scss
@@ -1,3 +1,15 @@
-// Place all the styles related to the checkout controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#frame {
+	width: 950px;
+}
+
+#top {
+	margin-top: 50px;
+}
+
+body {
+  background-color: red;
+
+  div {
+    background-color: coral;
+  }
+}
